fix issue Alexandre